--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <html>
 
 <head>
-	<title>Generic Page - Massively by HTML5 UP</title>
+	<title>Victoria Ogochukwu Chime</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+	<noscript></noscript>
+	<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
 </head>
 
