--- a/generic.html
+++ b/generic.html
@@ -46,7 +46,7 @@
 
 			</ul>
 			<ul class="icons">
-				<li><a href="www.linkedin.com/in/victoriachime" target="_blank"
+				<li><a href="https://www.linkedin.com/in/victoriachime/" target="_blank"
 						class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 				<li><a href="https://github.com/vickyogo" target="_blank" class="icon brands alt fa-github"><span
 							class="label">GitHub</span></a></li>
@@ -105,7 +105,7 @@
 			<section>
 				<h3>Social</h3>
 				<ul class="icons alt">
-					<li><a href="www.linkedin.com/in/victoriachime" target="_blank"
+					<li><a href="https://www.linkedin.com/in/victoriachime/" target="_blank"
 							class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 					<li><a href="https://github.com/vickyogo" target="_blank" class="icon brands alt fa-github"><span
 								class="label">GitHub</span></a></li>
