--- a/generic.html
+++ b/generic.html
@@ -61,6 +61,84 @@
 
 				<article>
 					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/Guesswk1.py">Guess my
+								Number<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/Guesswk1.py" class="image fit"><img
+							src="images/guessgame.png" alt="" /></a>
+					<p>The program will randomly generate a number and asks the user to guess it.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/Guesswk1.py"
+								target="_blank" class="button">view project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/assign1">Dice Rolling
+								Simulator<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/assign1" class="image fit"><img
+							src="images/diceroll.png" alt="" /></a>
+					<p>This game simulates rolling a dice that chooses randomly between 1 and 6.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/assign1" target="_blank"
+								class="button">view project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2Ibizamadlib.py">Ibiza
+								Madlibs
+								Generator<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2Ibizamadlib.py"
+						class="image fit"><img src="images/madlibs.jpeg" alt="" /></a>
+					<p>This program will prompt the user for a series of inputs and place them into a premade story
+						template to form a full story.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2Ibizamadlib.py"
+								target="_blank" class="button">view project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2adventure.py">Ibiza
+								Adventure Game<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2adventure.py"
+						class="image fit"><img src="images/advgame.jpeg" alt="" /></a>
+					<p>The program will let users move through rooms away from the aliens, based on user input.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk2adventure.py"
+								target="_blank" class="button">view project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk3earthquake.ipynb">Exploratory
+								Data Analysis for Earthquake Dataset.<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk3earthquake.ipynb"
+						class="image fit"><img src="images/Earthquake.jpg" alt="" /></a>
+					<p>I carried out an Earthquake Dataset Exploratory analysis with appropriate corresponding
+						visualisations using Matplotlib.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk3earthquake.ipynb"
+								target="_blank" class="button">view project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
 						<h2><a href="github url of project">project name<br />
 							</a></h2>
 					</header>
@@ -73,15 +151,18 @@
 
 				<article>
 					<header>
-						<h2><a href="github url of the project">Project name<br />
+						<h2><a href="github url of project">project name<br />
 							</a></h2>
 					</header>
-					<a href="github url of the poject" class="image fit"><img src="image url" alt="" /></a>
-					<p>brief description about the project.
+					<a href="github url of project" class="image fit"><img src="image url" alt="" /></a>
+					<p>description about the project
 					<ul class="actions special">
 						<li><a href="github url of the project" target="_blank" class="button">view project</a></li>
 					</ul>
 				</article>
+
+
+
 
 
 			</section>
