added about myself

--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Victoria O. Chime(dd, wps, pp)</a>
+			<a href="index.html" class="logo">Victoria O. Chime(B.Eng)</a>
 		</header>
 
 		<!-- Nav -->
@@ -136,32 +136,6 @@
 								target="_blank" class="button">view project</a></li>
 					</ul>
 				</article>
-
-				<article>
-					<header>
-						<h2><a href="github url of project">project name<br />
-							</a></h2>
-					</header>
-					<a href="github url of project" class="image fit"><img src="image url" alt="" /></a>
-					<p>description about the project
-					<ul class="actions special">
-						<li><a href="github url of the project" target="_blank" class="button">view project</a></li>
-					</ul>
-				</article>
-
-				<article>
-					<header>
-						<h2><a href="github url of project">project name<br />
-							</a></h2>
-					</header>
-					<a href="github url of project" class="image fit"><img src="image url" alt="" /></a>
-					<p>description about the project
-					<ul class="actions special">
-						<li><a href="github url of the project" target="_blank" class="button">view project</a></li>
-					</ul>
-				</article>
-
-
 
 
 
