--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 		<!-- Intro -->
 		<div id="intro">
-			<h1>You are welcome to my portfolio page<br />
+			<h1>You have reached my portfolio page, let's explore!<br />
 			</h1>
 
-			<p> A world of exploring Data </p>
+			<p> A world of Data Exploration.</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -60,23 +60,34 @@
 				<header class="major">
 					<h1><a href="https://www.linkedin.com/in/victoriachime/" target="_blank"> Victoria
 							O. Chime </a></h1>
-					<p>A bit about myself</p>
+					<p>About myself</p>
 				</header>
 				<a href="https://www.linkedin.com/in/victoriachime/" target="_blank" class="image main"><img
 						src="images/me.jpeg" alt="" /></a>
-				<p>Proactive and highly motivated individual with a stellar track record of success in data analysis,
-					data modelling, end-to-end ML building and deployment and problem solving with strong experience in
-					designing cutting edge ML models/algorithims using python, GIT, AWS and SQL to solve business
-					challenges.</p>
-				<p></p>After graduating with a Masters in Data Analytics from Manchester Metropolitan University, I
-				officially became a Data Analyst. Then I had few years of priceless experience with some companies which
-				cemented the knowledge I gathered. After about 3 years, I studied a bootcamp with The Developer Academy
-				to grasp the fundamentals of Data Science.</p>
-				<p>Therefore, I am a Data Analyst and Graduate Data Scientist that is passionate about working with
-					organisations that want to make data-driven decisions; from getting valuable insights from raw data
-					and make it visual and usable for the audience to deploy interactive applications that run Machine
+				<p> Driven and determined with an exceptional record in data analysis,
+					data modelling and end-to-end ML building to deployment, with strong experience in
+					designing cutting-edge ML models/algorithims using Python, GIT, AWS and SQL to profer solutions to
+					business challenges and optimum customer satisfaction.</p>
+
+				<p> Throughout my career, I have developed various transferable skills and relevant work experience,
+					that will enable me excel and add great value. With a bachelors degree in Civil Engineering,
+					I built the foundation of my problem solving, technical ability, critical thinking, team-working,
+					relationship-building skills and excellent thrive in client focused environments.
+					I learn't the importance of maintaining high customer satisfaction standards and following safety
+					protocols and regulation at all times.
+					I studied Data Science at The Developer Academy Bootcamp.
+				</p>
+
+				<p> However, I am a dynamic and diligent Data Scientist that is adaptable, coachable and willing to go
+					above and beyond to accompany company goals.
+					I'm passionate about working with organisations that thirst for data-driven decisions; from
+					exploring
+					raw data to producing appropriate visualisations and insights for interactive applications, that run
+					Machine
 					Learning models into production.</p>
-				<p>Do you thirst for excellence, ? Please reach out to me by any of the means of contact.</p>
+
+				<p> Do you desire for excellence in high tensity projects? I am all in, just a click away through any of
+					my means of contact.</p>
 
 
 			</section>
