--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				</header>
 				<a href="https://www.linkedin.com/in/victoriachime/" target="_blank" class="image main"><img
 						src="images/me.jpeg" alt="" /></a>
-				<p> Driven and determined with an exceptional record in data analysis,
+				<p> Driven and determined individual with an exceptional record in data analysis,
 					data modelling and end-to-end ML building to deployment, with strong experience in
 					designing cutting-edge ML models/algorithims using Python, GIT, AWS and SQL to profer solutions to
 					business challenges and optimum customer satisfaction.</p>
