--- a/generic.html
+++ b/generic.html
@@ -137,6 +137,21 @@
 					</ul>
 				</article>
 
+				<article>
+					<header>
+						<h2><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk5.ipynb">New York JFK Airport, Flight Taxi_out Dataset analysis.<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk5.ipynb"
+						class="image fit"><img src="images/jfk.jpg" alt="" /></a>
+					<p>I carried out a flight Taxi_out time analysis of JFK airport and End to End model building with appropriate corresponding
+						visualisations using Matplotlib and Seaborn.
+					<ul class="actions special">
+						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk5.ipynb"
+								target="_blank" class="button">view project</a></li>
+					</ul>
+				</article>
+
 
 
 			</section>
