--- a/generic.html
+++ b/generic.html
@@ -144,7 +144,7 @@
 					</header>
 					<a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk5.ipynb"
 						class="image fit"><img src="images/jfk.jpg" alt="" /></a>
-					<p>I carried out a flight Taxi_out time analysis of JFK airport and End to End model building with appropriate corresponding
+					<p>I carried out a flight Taxi_out time analysis of JFK airport of 92days dataset and built prediction End to End model with appropriate corresponding
 						visualisations using Matplotlib and Seaborn.
 					<ul class="actions special">
 						<li><a href="https://github.com/vickyogo/Developer-Academy/blob/main/wk5.ipynb"
